fix(options): hack for hiding option on ios

--- a/src/app/components/select/select.component.scss
+++ b/src/app/components/select/select.component.scss
@@ -51,6 +51,11 @@
       }
       option {
         display: none;
+        // hack for ios because display none is not enough
+        opacity: 0;
+        height: 0;
+        width: 0;
+        overflow: hidden;
       }
     }
 
